footer added to every page

--- a/cirrus-clouds.html
+++ b/cirrus-clouds.html
@@ -73,9 +73,8 @@ Cirrus generally appears white or light gray in color. It forms when water vapor
 Jet stream-powered cirrus can grow long enough to stretch across continents, but it remains only a few kilometers deep. When visible light interacts with the ice crystals in cirrus cloud, it produces optical phenomena such as sun dogs and haloes. Cirrus is known to raise the temperature of the air beneath the main cloud layer by an average of 10 °C (18 °F). When the individual filaments become so extensive that they are virtually indistinguishable from one another, they form a sheet of high cloud called cirrostratus. Convection at high altitudes can produce another high based genus called cirrocumulus, a pattern of small cloud tufts that contain droplets of supercooled water.
 Cirrus clouds form on other planets, including Mars, Jupiter, Saturn, Uranus, and possibly Neptune. They have even been seen on Titan, one of Saturn's moons. Some of these extraterrestrial cirrus clouds are composed of ammonia or methane ice rather than water ice. The term cirrus is also used for certain interstellar clouds composed of sub-micrometer sized dust grains.</p>
 </div>
-<div class="span4">
-
-		 <h2 class="media-title">Description</h2>
+	<div class="span4">
+	<h2 class="media-title">Description</h2>
            <p>Cirrus cloud ranges in thickness from 100 m (330 ft) to 8,000 m (26,000 ft), with an average thickness of 1,500 m (4,900 ft). There are, on average, 30 ice crystals per liter (96 ice crystals per gallon), but this ranges from one ice crystal per 10,000 liters (3.7 ice crystals per 10,000 gallons) to 10,000 ice crystals per liter (37,000 ice crystals per gallon), a difference of eight orders of magnitude. The length of each of these ice crystals is usually 0.25 millimeters long, but they range from as short as 0.01 millimeters or as long as several millimeters. The ice crystals in contrails are much smaller than those in naturally-occurring cirrus cloud, as they are around 0.001 millimeters to 0.1 millimeters in length. Cirrus can vary in temperature from −20 °C (−4 °F) to −30 °C (−22 °F).
 The ice crystals in cirrus cloud have different shapes in addition to different sizes. Some shapes include solid columns, hollow columns, plates, rosettes, and conglomerations of the various other types. The shape of the ice crystals is determined by the air temperature, atmospheric pressure, and ice supersaturation. Cirrus in temperate regions typically have the shapes segregated by type: the columns and plates tend to be at the top of the cloud, whereas the rosettes and conglomerations tend to be near the base. In the northern Arctic region, cirrus tend to be composed of only the columns, plates, and conglomerations, and these crystals tend to be at least four times larger than the minimum size. In Antarctica, cirrus are usually composed of only the columns, and these columns are much longer than normal.</p>
        </div>
@@ -113,7 +112,13 @@ The altitudes of high-étage clouds like cirrus vary considerably with latitude.
         });
       });
     </script>
+	
 
+
+ <footer role="contentinfo">
+		<p class="copyright">©2013 C Chartrand. All Rights Reserved</p>
+		<a href="#top"</a>
+</footer>
 
 
 
