--- a/cumulus-clouds.html
+++ b/cumulus-clouds.html
@@ -129,6 +129,12 @@ Cumulus supplementary features are most commonly seen with the species congestus
         });
       });
     </script>
+	
+
+ <footer role="contentinfo">
+		<p class="copyright">©2013 C Chartrand. All Rights Reserved</p>
+		<a href="#top"</a>
+</footer>
 
 
 
