--- a/physical-categories.html
+++ b/physical-categories.html
@@ -127,6 +127,12 @@
         });
       });
     </script>
+	
+
+ <footer role="contentinfo">
+		<p class="copyright">©2013 C Chartrand. All Rights Reserved</p>
+		<a href="#top"</a>
+</footer>
 
 
 
