--- a/weather.html
+++ b/weather.html
@@ -139,6 +139,12 @@ Individual cirrus cloud formations can be the remnants of anvil clouds formed by
         });
       });
     </script>
+	
+
+ <footer role="contentinfo">
+		<p class="copyright">©2013 C Chartrand. All Rights Reserved</p>
+		<a href="#top"</a>
+</footer>
 
 
 
