--- a/stratus-clouds.html
+++ b/stratus-clouds.html
@@ -106,6 +106,12 @@
       });
     </script>
 	
+
+ <footer role="contentinfo">
+		<p class="copyright">©2013 C Chartrand. All Rights Reserved</p>
+		<a href="#top"</a>
+</footer>
+	
 	
 	
 
