--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="handheldfriendly" content="true">
 <meta name="mobileoptimized" content="240">
 <meta name="viewport" content="width=device-width;initial-scale=1">
+<script src="js/modernizr.js"></script>
 </head>
 <body id="top">
 
