--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="css/general.css">
 <meta name="handheldfriendly" content="true">
 <meta name="mobileoptimized" content="240">
-<meta name="viewport" content="width=device-width;initial-scale=1">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <script src="js/modernizr.js"></script>
 </head>
 <body id="top">
