--- a/404.html
+++ b/404.html
@@ -56,7 +56,7 @@
     </div><!-- /.navbar -->
 
 	
-	<img src="img/tornado-lightning.jpg" alt="404 error" class="error-404"/>
+	<a href="index.html"><img src="img/tornado-lightning.jpg" alt="404 error" class="error-404"/></a>
 	
  <footer role="contentinfo">
 		<p class="copyright">©2013 C Chartrand. All Rights Reserved</p>
