--- a/physical-categories.html
+++ b/physical-categories.html
@@ -36,7 +36,7 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="index.html">Home</a></li>
-              <li><a href="#about">Weather</a></li>
+              <li><a href="weather.html">Weather</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                       About Clouds
