--- a/weather.html
+++ b/weather.html
@@ -68,7 +68,7 @@
         <div class="span4">
          <h2>Weather</h2>
 </div>
-		<img src="img/weather-table.png" alt"This week's weather" class="weather-table">
+		<img src="img/weather-table.jpg" alt"This week's weather" class="weather-table">
 		<div class="span4">
 	<h2 class="media-title">Clouds and weather forecasting</h2>
            <p>The identification and reporting of clouds contribute to the process of weather forecasting. Satellite pictures used in conjunction with the cloud symbols plotted on weather maps provide the forecaster with important information about conditions within the troposphere and the weather systems that form as a result.</p>
